# GnoPi

./: Cargo.toml  README.md  build.rs  icons.gresource  icons.toml
assets/: 1m
src/: app.rs  config.rs  main.rs
src/app/: mod.rs  preferences.rs
src/components/: about.rs  header.rs  mod.rs  pi_digit.rs  preferences.rs
