[package]
name = "gnopi"
version = "0.1.0"
edition = "2021"
description = "A π memorization trainer"

[dependencies]
dirs = "5.0.1"
relm4 = { version = "0.8.0", features = ["libadwaita", "gnome_46"] }
relm4-components = "0.8.0"
relm4-icons = "0.8.0"

[build-dependencies]
glib-build-tools = "0.19.0"
